--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,9 +23,11 @@ itsdangerous==2.2.0
 Mako==1.3.10
 MarkupSafe==3.0.3
 passlib==1.7.4
+phonenumbers==9.0.23
 psycopg2-binary==2.9.11
 pycparser==3.0
 pydantic==2.12.5
+pydantic-extra-types==2.11.0
 pydantic_core==2.41.5
 PyJWT==2.11.0
 python-dotenv==1.2.1
