--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -86,7 +86,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = postgresql+psycopg2://postgres:Arhip2010@localhost:5432/contabook
+sqlalchemy.url = postgresql+psycopg2://postgres:Arhip2010@127.0.0.1:5432/contabook
 
 
 [post_write_hooks]
