--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,14 @@ __pycache__/
 # C extensions
 *.so
 
+
+docker-compose.yml
+
+/backend/Dockerfile
+/frontend/Dockerfile
+/backend/alembic.ini
+/backend/alembic
+
 # Distribution / packaging
 .Python
 build/
